@startuml
title <size: 30> Domain Model - v5.0


hide circle
hide empty members
left to right direction

class House {
houseName
}

class SensorType {
}

class ActuatorType {
}

class Address {
doorReference
buildingNumber
streetName
city
country
zipCode
}

class GPS {
latitude
longitude
}

class Room {
name
houseFloor
}

class RoomDimensions {
width
length
height
}

class Device {
deviceName
deviceModel
roomName
}


class Sensor {
}

class ExternalServices {
}

class SensorType {
}

class Actuator {
}

class ActuatorType {
}

class User {
}

class UserRole {
}

class Reading {
}

User "*" -- "1..*" UserRole : > has
User "1..*"-- "1" House : > can configure
User "0..1" -- "*" Room : < is managed
User "1..*" --- "*" Room : > may add

House "1" -- "*" Room : > has
House "1" -- "1" Address : > has
House "1" -- "1" GPS : > has

Room "1" -- "*" Device : > has
Room "1" -- "1" RoomDimensions : > has

Sensor "*" -- "1" SensorType : > has
Sensor "1" -up "*" Reading : > obtains
Actuator "*" -- "1" ActuatorType : > has
Device "1" -- "*" Sensor : > can have
Device "1" -- "*" Actuator : > can have
Sensor "1" -- "1" ExternalServices : > uses
Actuator "1" -- "1" ExternalServices : > uses

@enduml
